--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -33,8 +33,8 @@
         <local:StringToBoolConverter x:Key="StringToBoolConverter" />
         <local:CornerRadiusConverter x:Key="CornerRadiusConverter" />
         <local:SelectionCountToBooleanConverter x:Key="SelectionCountToBooleanConverter"/>
-        <local:ItemToIndexConverter x:Key="ItemToIndexConverter"/>
-        
+        <local:QueueItemDisplayConverter x:Key="QueueItemDisplayConverter"/>
+
         <!-- ScrollBar Thumb Style -->
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
             <Setter Property="OverridesDefaultStyle" Value="true"/>
