--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -1218,7 +1218,7 @@
                                                         <DataTemplate DataType="{x:Type local:QueueItemDetailViewModel}">
                                                             <TextBlock FontSize="11" Foreground="{StaticResource TextSecondaryBrush}" TextTrimming="CharacterEllipsis">
                                                                 <Run Text="{Binding DisplayName}" FontWeight="SemiBold"/>:
-                                                                <Run Text="{Binding NewValue}"/>
+                                                                <Run Text="{Binding NewValue}" Foreground="#E6DB74"/>
                                                             </TextBlock>
                                                         </DataTemplate>
                                                     </ItemsControl.ItemTemplate>
