--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -948,14 +948,20 @@
             </Grid>
         </DataTemplate>
 
+            
         <DataTemplate x:Key="WildcardTemplate" DataType="{x:Type local:TextFieldViewModel}">
             <!-- The root is now a Grid that will contain both editors -->
             <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                
                 <!-- Simple Editor (visible by default) -->
-                <Grid x:Name="SimpleEditor">
+                <Grid x:Name="SimpleEditor" Grid.Row="0">
                     <TextBox x:Name="WildcardTextBox" Text="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                              AcceptsReturn="True" TextWrapping="Wrap" Padding="5,5,52,5"
-                             VerticalScrollBarVisibility="Auto" MaxHeight="100"
+                             VerticalScrollBarVisibility="Auto" MinHeight="60"
                              PreviewKeyDown="WildcardTextBox_PreviewKeyDown"/>
     
                     <!-- GROUPED BUTTONS -->
@@ -975,9 +981,36 @@
                 </Grid>
         
                 <!-- Advanced Editor (hidden by default) -->
-                <local:AdvancedPromptEditor x:Name="AdvancedEditor"
+                <local:AdvancedPromptEditor x:Name="AdvancedEditor" Grid.Row="0"
                                             PromptText="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                            Visibility="Collapsed"/>
+                                            Visibility="Collapsed"
+                                            MinHeight="150"/>
+
+                <!-- Resizing Thumb -->
+                <Thumb Grid.Row="1" Height="5" Cursor="SizeNS" Margin="0,2,0,0">
+                    <Thumb.Style>
+                        <Style TargetType="Thumb">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Thumb">
+                                        <Border Background="{StaticResource TertiaryBackground}" CornerRadius="2.5"/>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="Thumb">
+                                                <Border Background="{StaticResource PrimaryAccentBrush}" CornerRadius="2.5"/>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Thumb.Style>
+                </Thumb>
             </Grid>
 
             <DataTemplate.Triggers>
@@ -988,6 +1021,7 @@
                 </DataTrigger>
             </DataTemplate.Triggers>
         </DataTemplate>
+        
 
         <DataTemplate x:Key="SliderTemplate" DataType="{x:Type local:SliderFieldViewModel}">
             <StackPanel Orientation="Horizontal">
