--- a/Comfizen/Views/AdvancedPromptEditor.xaml
+++ b/Comfizen/Views/AdvancedPromptEditor.xaml
@@ -1,5 +1,4 @@
-﻿<!-- AdvancedPromptEditor.xaml -->
-<UserControl x:Class="Comfizen.AdvancedPromptEditor"
+﻿<UserControl x:Class="Comfizen.AdvancedPromptEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,12 +16,14 @@
         <SolidColorBrush x:Key="DisabledForeground" Color="#dddddd"/>
     </UserControl.Resources>
     
-    <StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
         <!-- The main TextBox for editing the prompt -->
-        <Grid>
-            <!-- NOTE: The 'OverlayIconButton' style is still expected to be in App.xaml or a parent resource,
-                 as it's likely a generic style for your application. If this also causes an error,
-                 you would need to define a minimal style for it here as well. -->
+        <Grid Grid.Row="0">
             <TextBox x:Name="PromptTextBox"
                      Text="{Binding PromptText, ElementName=RootControl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      AcceptsReturn="True"
@@ -47,7 +48,7 @@
         </Grid>
         
         <!-- The area where token buttons will be displayed -->
-        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" MaxHeight="100" Margin="0,5,0,0">
+        <ScrollViewer x:Name="TokenScrollViewer" Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" Margin="0,5,0,0">
             <ItemsControl ItemsSource="{Binding Tokens, ElementName=RootControl}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -102,5 +103,5 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
-    </StackPanel>
+    </Grid>
 </UserControl>
