--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -322,8 +322,7 @@
                     <ScrollViewer x:Name="ControlsScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled"
                                   Visibility="{Binding SelectedTab, Converter={StaticResource StringToIsNotNullOrEmptyConverter}}"
                                   PreviewMouseWheel="ControlsScrollViewer_PreviewMouseWheel"
-                                  Button.Click="WorkflowField_ButtonClick"
-                                  Thumb.DragDelta="OnResizeThumbDragDelta">
+                                  Button.Click="WorkflowField_ButtonClick">
                         <StackPanel>
                             <StackPanel.Resources>
                                 <DataTemplate DataType="{x:Type local:GlobalControlsViewModel}">
